# plasma-engine-nowreading

./: CMakeLists.txt  nowreadingengine.cpp  nowreadingengine.h  plasma-engine-nowreading.desktop
